# ASR_with_pytorch_lightning

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/data/: jsut_datamodule.py
src/data/components/: audio_text_datasets.py
src/data/formatter/: jsut.py
src/utils/: logging_utils.py  rich_utils.py
tests/: test_datamodules.py
