[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "asr-with-pytorch-lightning"
version = "0.1.0"
description = "Speech recognition starting with pytorch lightning"
authors = ["kinouchi1000 <kinouchi.takahiro.tg@tut.jp>"]
readme = "README.md"
packages = [{include = "asr_with_pytorch_lightning"}]

[tool.poetry.dependencies]
python = "3.10.10"
torch = "^2.0.0"
torchaudio = "^2.0.1"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.1.post0"
hydra-core = "^1.3.2"
loguru = "^0.7.0"
timm = "^0.6.13"
s3prl = "^0.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
