[tool.poetry]
name = "asr-with-pytorch-lightning"
version = "0.1.0"
description = ""
authors = ["kinouchi1000 <kinouchi.takahiro.tg@tut.jp>"]
readme = "README.md"
packages = [{include = "asr_with_pytorch_lightning"}]

[tool.poetry.dependencies]
python = "3.8.16"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
lightning = ">=2.0.0"
torchmetrics = ">=0.11.4"
hydra = "^2.5"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
loggers = "^0.1.4"
wandb = "^0.14.2"
pyrootutils = "^1.0.4"
pre-commit = "^3.2.2"
rich = "^13.3.4"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
