# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information and other project-specific configuration below.
# NOTE: You don't need this in your own Black configuration.


[tool.poetry]
name = "asr-with-pytorch-lightning"
version = "0.1.0"
description = ""
authors = ["kinouchi1000 <kinouchi.takahiro.tg@tut.jp>"]
readme = "README.md"
packages = [{include = "asr_with_pytorch_lightning"}]

[tool.poetry.dependencies]
python = "3.8.16"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
lightning = ">=2.0.0"
torchmetrics = ">=0.11.4"
hydra = "^2.5"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
loggers = "^0.1.4"
wandb = "^0.15.3"
pyrootutils = "^1.0.4"
pre-commit = "^3.2.2"
rich = "^13.3.4"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
